--- a/package.json
+++ b/package.json
@@ -63,9 +63,9 @@
     "rimraf": "^2.6.2"
   },
   "dependencies": {
+    "@babel/parser": "^7.0.0-beta.53",
     "babel-plugin-jsx": "^1.2.0",
     "babel-plugin-syntax-flow": "^6.18.0",
-    "babylon": "^6.18.0",
     "commander": "^2.11.0",
     "fb-watchman": "^2.0.0",
     "glob": "^7.1.2",
